--- a/public/contact.html
+++ b/public/contact.html
@@ -1,6 +1,6 @@
 <h1>Contact Me</h1>
-<p>Tel: +647-740-3755</p>
-<p>Email: knrachita.com</p>
+<p>Tel: 647-740-3755</p>
+<p>Email: knrachita@gmail.com</p>
 <p>Address:Connery Crescent </p>
 <p>
   
